# Macro

./: .gitignore  CMakeLists.txt
Gui/: CMakeLists.txt  MacroWindow.cpp  MacroWindow.h  MacroWindow.ui  main.cpp
MacroDaemon/: CMakeLists.txt  Controller.cpp  Controller.h  GlobalData.h  main.cpp
use_all/: CMakeLists.txt
use_all/Macro/: InputUtilities.cpp  InputUtilities.h  MacroDef.cpp  MacroDef.h
use_all/Type/: TypeSystem.h
